--- a/package.json
+++ b/package.json
@@ -25,30 +25,27 @@
   ],
   "scripts": {
     "build": "node --import tsx/esm build.config.ts",
-    "build:docs": "(cd docs; npm install; npm run build)",
-    "check:cost": "npx cost-of-modules --no-install --include-dev",
-    "check:coverage": "npx vitest run --coverage=true",
-    "check:full": "npm run lint && npm run check:types && npm run check:coverage && npm run check:project",
-    "check:project": "npx node-standards lint",
-    "check:types": "npx tsc -p tsconfig.json",
-    "format": "npx prettier \"**/*.{ts,js,json,yml,yaml,md}\" --write",
-    "lint": "npx eslint \"./{src,test,typings}/**/*.ts\" --cache --no-eslintrc --config .eslintrc.cjs",
+    "build:docs": "npm run --workspace=docs build",
+    "check:coverage": "vitest run --coverage=true",
+    "check:project": "node-standards lint",
+    "check:types": "tsc -p tsconfig.json",
+    "format": "prettier \"**/*.{ts,js,json,yml,yaml,md}\" --write",
+    "lint": "eslint \"./{src,test,typings}/**/*.ts\" --cache --no-eslintrc --config .eslintrc.cjs",
     "lint:fix": "npm run lint -- --fix",
-    "lint:full": "bash -c \"FULL_LINT=true npm run lint\"",
     "package": "rm -rf .dist && npm run build",
-    "prepare": "npx husky install || true",
-    "test": "npx vitest run"
+    "prepare": "husky || true",
+    "test": "vitest run"
   },
   "dependencies": {
     "@skyleague/jsonpath": "^3.1.1",
     "tslib": "^2.6.2",
-    "type-fest": "^4.9.0"
+    "type-fest": "^4.10.2"
   },
   "devDependencies": {
-    "@skyleague/axioms": "^3.4.0",
-    "@skyleague/node-standards": "^4.1.2",
+    "@skyleague/axioms": "^3.6.0",
+    "@skyleague/node-standards": "^5.1.7",
     "@skyleague/therefore": "^4.1.1",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.8",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1"
   },
@@ -62,5 +59,8 @@
     ".": "./.dist/index.js",
     "./package.json": "./package.json",
     "./*.js": "./.dist/*.js"
-  }
+  },
+  "workspaces": [
+    "docs"
+  ]
 }
