--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "extends": ["library", "docusaurus"]
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   },
   "homepage": "https://skyleague.github.io/predicate/",
   "repository": {
@@ -23,22 +23,21 @@
     "check:coverage": "vitest run --coverage=true",
     "check:project": "node-standards lint",
     "check:types": "tsc -p tsconfig.json",
-    "lint": "biome check src test examples",
-    "lint:fix": "npm run lint -- --apply-unsafe",
-    "package": "rm -rf .dist && npm run build",
+    "lint": "biome check",
+    "lint:fix": "node --run lint -- --write --unsafe",
+    "package": "rm -rf .dist && node --run build",
     "prepare": "husky || true",
     "test": "vitest run"
   },
   "dependencies": {
-    "@skyleague/jsonpath": "^3.1.1"
+    "@skyleague/axioms": "^6.1.0",
+    "@skyleague/jsonpath": "^4.0.0"
   },
   "devDependencies": {
-    "@skyleague/axioms": "^4.3.1",
-    "@skyleague/node-standards": "^7.0.2",
-    "@skyleague/therefore": "^5.1.1",
-    "@types/uuid": "^9.0.8",
-    "typescript": "^5.4.5",
-    "uuid": "^9.0.1"
+    "@skyleague/node-standards": "^9.4.0",
+    "@skyleague/therefore": "^6.1.2",
+    "typescript": "^5.7.2",
+    "uuid": "^11.0.3"
   },
   "publishConfig": {
     "access": "public",
