feat: enable noMisusedPromises rule and update dependencies

--- a/biome.json
+++ b/biome.json
@@ -46,6 +46,9 @@
         "noUnusedVariables": "error",
         "noUnusedImports": "error",
         "useHookAtTopLevel": "error"
+      },
+      "nursery": {
+        "noMisusedPromises": "error"
       }
     }
   },
